migrate artifact parsers to streaming JSONL
Add .jsonl streaming parsers (forEachLine, bounded memory) for files,
packages, mounts and root_binaries and drop the obsolete .pb readers
(unreleased). Tombstone protobuf is untouched.